--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@craco/craco": "^5.8.0",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.7",
-    "autoprefixer": "^9.8.6",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
     "file-saver": "^2.0.5",
@@ -18,15 +18,13 @@
     "graphql-tag": "^2.10.3",
     "jszip": "^3.6.0",
     "jwt-decode": "^2.2.0",
-    "postcss": "^7.0.35",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.9.0",
-    "styled-components": "^5.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "craco start",
@@ -49,5 +47,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+  }
 }
